// QONECTIQ.proto
//
// Auto-generated by ApodiniGRPC, at 2022-02-05 23:37:26+01:00



syntax = "proto3";

package QONECTIQ;


import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service QONECTIQ {
  // APODINI-identifier: addReviewToEvent
  // APODINI-handlerName: QONECTIQV1.AddReviewHandler
  rpc AddReviewHandler(.QONECTIQ.AddReviewHandlerInput) returns (.QONECTIQ.Review);
  // APODINI-identifier: createCategory
  // APODINI-handlerName: QONECTIQV1.CreateCategoryHandler
  rpc CreateCategoryHandler(.QONECTIQ.EventCategory) returns (.google.protobuf.Empty);
  // APODINI-identifier: createEvent
  // APODINI-handlerName: QONECTIQV1.CreateEventHandler
  rpc CreateEventHandler(.QONECTIQ.Event) returns (.google.protobuf.Empty);
  // APODINI-identifier: register
  // APODINI-handlerName: QONECTIQV1.UserRegisterFormHandler
  rpc CreateUserRegisterFormHandler(.QONECTIQ.UserRegisterForm) returns (.QONECTIQ.User);
  // APODINI-identifier: deleteEventWithID
  // APODINI-handlerName: QONECTIQV1.DeleteEventHandler
  rpc DeleteEventHandler(.QONECTIQ.DeleteEventHandlerInput) returns (.QONECTIQ.Event);
  // APODINI-identifier: deleteUserWithID
  // APODINI-handlerName: QONECTIQV1.DeleteUserHandler
  rpc DeleteUserHandler(.QONECTIQ.DeleteUserHandlerInput) returns (.google.protobuf.Empty);
  // APODINI-identifier: getAllUsers
  // APODINI-handlerName: QONECTIQV1.GetAllUsersHandler
  rpc GetAllUsersHandler(.google.protobuf.Empty) returns (.QONECTIQ.GetAllUsersHandlerResponse);
  // APODINI-identifier: getAllCategories
  // APODINI-handlerName: QONECTIQV1.GetCategoriesHandler
  rpc GetCategoriesHandler(.google.protobuf.Empty) returns (.QONECTIQ.GetCategoriesHandlerResponse);
  // APODINI-identifier: getEventsOfCategory
  // APODINI-handlerName: QONECTIQV1.CategoryEventsHandler
  rpc GetCategoryEventsHandler(.QONECTIQ.CategoryEventsHandlerInput) returns (.QONECTIQ.CategoryEventsHandlerResponse);
  // APODINI-identifier: getCategoryWithID
  // APODINI-handlerName: QONECTIQV1.GetCategoryHandler
  rpc GetCategoryHandler(.QONECTIQ.GetCategoryHandlerInput) returns (.QONECTIQ.EventCategory);
  // APODINI-identifier: getEventWithID
  // APODINI-handlerName: QONECTIQV1.GetEventHandler
  rpc GetEventHandler(.QONECTIQ.GetEventHandlerInput) returns (.QONECTIQ.Event);
  // APODINI-identifier: getAllEvents
  // APODINI-handlerName: QONECTIQV1.GetEventsHandler
  rpc GetEventsHandler(.google.protobuf.Empty) returns (.QONECTIQ.GetEventsHandlerResponse);
  // APODINI-identifier: usersOfExperience
  // APODINI-handlerName: QONECTIQV1.ExperienceUsersHandler
  rpc GetExperienceUsersHandler(.QONECTIQ.ExperienceUsersHandlerInput) returns (.QONECTIQ.ExperienceUsersHandlerResponse);
  // APODINI-identifier: getCategoriesOfGroup
  // APODINI-handlerName: QONECTIQV1.GroupCategoriesHandler
  rpc GetGroupCategoriesHandler(.QONECTIQ.GroupCategoriesHandlerInput) returns (.QONECTIQ.GroupCategoriesHandlerResponse);
  // APODINI-identifier: getHomeFeedForUserWithID
  // APODINI-handlerName: QONECTIQV1.HomeFeedHandler
  rpc GetHomeFeedHandler(.QONECTIQ.HomeFeedHandlerInput) returns (.QONECTIQ.HomeFeed);
  // APODINI-identifier: getParticipantsOfEventWithID
  // APODINI-handlerName: QONECTIQV1.GetParticipantsOfEventHandler
  rpc GetParticipantsOfEventHandler(.QONECTIQ.GetParticipantsOfEventHandlerInput) returns (.QONECTIQ.GetParticipantsOfEventHandlerResponse);
  // APODINI-identifier: getReviewsOfEventWithID
  // APODINI-handlerName: QONECTIQV1.ReviewsHandler
  rpc GetReviewsHandler(.QONECTIQ.ReviewsHandlerInput) returns (.QONECTIQ.ReviewsHandlerResponse);
  // APODINI-identifier: getUserWithID
  // APODINI-handlerName: QONECTIQV1.GetUserHandler
  rpc GetUserHandler(.QONECTIQ.GetUserHandlerInput) returns (.QONECTIQ.User);
  // APODINI-identifier: login
  // APODINI-handlerName: QONECTIQV1.UserLoginHandler
  rpc GetUserLoginHandler(.QONECTIQ.UserLogin) returns (.QONECTIQ.User);
  // APODINI-identifier: updateEventWithID
  // APODINI-handlerName: QONECTIQV1.UpdateEventHandler
  rpc UpdateEventHandler(.QONECTIQ.UpdateEventHandlerInput) returns (.QONECTIQ.Event);
}


message AddReviewHandlerInput {
  .QONECTIQ.ReviewForm review = 1;
  string eventID = 2;
  string userID = 3;
}


message CategoryEventsHandlerInput {
  .QONECTIQ.EventCategoryGroup group = 1;
}


message CategoryEventsHandlerResponse {
  repeated .QONECTIQ.Event value = 1 [packed = false];
}


message DeleteEventHandlerInput {
  string id = 1;
}


message DeleteUserHandlerInput {
  string userID = 1;
}


message Event {
  string id = 1;
  string title = 2;
  string summary = 3;
  repeated .QONECTIQ.Review reviews = 4 [packed = false];
  .google.protobuf.Timestamp date = 5;
  uint64 duration = 6;
  string imagePath = 7;
  optional uint64 maxParticipants = 8;
  string organizer = 9;
  repeated string tags = 10 [packed = false];
  .QONECTIQ.EventCategory category = 11;
}


message EventCategory {
  string id = 1;
  string title = 2;
  .QONECTIQ.EventCategoryGroup group = 3;
  .QONECTIQ.CategoryStatus status = 4;
}


message EventMediator {
  .google.protobuf.Timestamp date = 1;
  optional uint64 duration = 2;
  optional uint64 maxParticipants = 3;
}


message ExperienceUsersHandlerInput {
  .QONECTIQ.Experience experience = 1;
}


message ExperienceUsersHandlerResponse {
  repeated .QONECTIQ.User value = 1 [packed = false];
}


message GetAllUsersHandlerResponse {
  repeated .QONECTIQ.User value = 1 [packed = false];
}


message GetCategoriesHandlerResponse {
  repeated .QONECTIQ.EventCategory value = 1 [packed = false];
}


message GetCategoryHandlerInput {
  string id = 1;
}


message GetEventHandlerInput {
  string id = 1;
}


message GetEventsHandlerResponse {
  repeated .QONECTIQ.Event value = 1 [packed = false];
}


message GetParticipantsOfEventHandlerInput {
  string eventID = 1;
}


message GetParticipantsOfEventHandlerResponse {
  repeated .QONECTIQ.User value = 1 [packed = false];
}


message GetUserHandlerInput {
  string userID = 1;
}


message GroupCategoriesHandlerInput {
  .QONECTIQ.EventCategoryGroup groupCategory = 1;
}


message GroupCategoriesHandlerResponse {
  repeated .QONECTIQ.EventCategory value = 1 [packed = false];
}


message HomeFeed {
  string id = 1;
  string userID = 2;
  string greeting = 3;
  string subtitle = 4;
  string searchBarText = 5;
  repeated .QONECTIQ.HomeFeedEvent events = 6 [packed = false];
  repeated .QONECTIQ.HomeFeedCategory categories = 7 [packed = false];
}


message HomeFeedCategory {
  string categoryID = 1;
  string title = 2;
  string imageURL = 3;
  uint64 eventsCount = 4;
}


message HomeFeedEvent {
  string eventID = 1;
  string title = 2;
  string subtitle = 3;
  string imageURL = 4;
  uint64 eventsCount = 5;
}


message HomeFeedHandlerInput {
  string userID = 1;
}


message Review {
  string id = 1;
  string title = 2;
  string content = 3;
  string eventID = 4;
  string reviewerID = 5;
  string summary = 6;
  .QONECTIQ.Rating rating = 7;
}


message ReviewForm {
  string title = 1;
  string content = 2;
  string summary = 3;
  .QONECTIQ.Rating rating = 4;
}


message ReviewsHandlerInput {
  string eventID = 1;
}


message ReviewsHandlerResponse {
  repeated .QONECTIQ.Review value = 1 [packed = false];
}


message UpdateEventHandlerInput {
  .QONECTIQ.EventMediator eventMediator = 1;
  string eventID = 2;
}


message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string password = 4;
  string email = 5;
  .google.protobuf.Timestamp birthday = 6;
  bool subscribedToNewsLetter = 7;
  .QONECTIQ.Experience experience = 8;
  repeated .QONECTIQ.Review reviews = 9 [packed = false];
  repeated .QONECTIQ.Event ownEvents = 10 [packed = false];
  repeated .QONECTIQ.Event participatingEvents = 11 [packed = false];
  repeated .QONECTIQ.Event eventsOfInterest = 12 [packed = false];
  .QONECTIQ.HomeFeed homeFeed = 13;
}


message UserLogin {
  string userName = 1;
  string password = 2;
}


message UserRegisterForm {
  string name = 1;
  string surname = 2;
  string password = 3;
  .google.protobuf.Timestamp birthday = 4;
  string email = 5;
  bool subscribedToNewsLetter = 6;
}


enum CategoryStatus {
  available = 0;
  unavailable = 1;
}


enum EventCategoryGroup {
  marketing = 0;
  blogging = 1;
  coding = 2;
  cooking = 3;
  dating = 4;
  travellinng = 5;
  studying = 6;
  science = 7;
}


enum Experience {
  beginner = 0;
  expert = 1;
}


enum Rating {
  outstanding = 0;
  exceedsExpectation = 1;
  meetsExpectation = 2;
  needsImprovement = 3;
  unacceptable = 4;
  undefined = 5;
}

